--- a/RostelecomBot_v2.ipynb
+++ b/RostelecomBot_v2.ipynb
@@ -1,6 +1,61 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Данный бот в тестовом режиме хостится на PythonAnywhere и доступен в телеграмме (https://t.me/votTochnoNewTestBot), однако из-за особенностей хостинга может быть не всегда доступен. Поэтому в качестве черновика приложен данный юпитер ноутбук.\n",
+        "> Добавить блок с цитатой\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5l3Un9Gq--2D"
+      },
+      "id": "5l3Un9Gq--2D"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install python-telegram-bot"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PhoZFemA2f6j",
+        "outputId": "f6aa4403-dbfa-498b-f75c-163861d0e0f1"
+      },
+      "id": "PhoZFemA2f6j",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting python-telegram-bot\n",
+            "  Downloading python_telegram_bot-21.1.1-py3-none-any.whl (618 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m618.7/618.7 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting httpx~=0.27 (from python-telegram-bot)\n",
+            "  Downloading httpx-0.27.0-py3-none-any.whl (75 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: anyio in /usr/local/lib/python3.10/dist-packages (from httpx~=0.27->python-telegram-bot) (3.7.1)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx~=0.27->python-telegram-bot) (2024.2.2)\n",
+            "Collecting httpcore==1.* (from httpx~=0.27->python-telegram-bot)\n",
+            "  Downloading httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx~=0.27->python-telegram-bot) (3.6)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx~=0.27->python-telegram-bot) (1.3.1)\n",
+            "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx~=0.27->python-telegram-bot)\n",
+            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx~=0.27->python-telegram-bot) (1.2.0)\n",
+            "Installing collected packages: h11, httpcore, httpx, python-telegram-bot\n",
+            "Successfully installed h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 python-telegram-bot-21.1.1\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "1c4212cd",
@@ -15,7 +70,7 @@
         "from telegram.ext import ApplicationBuilder, ContextTypes, CommandHandler, MessageHandler, filters, CallbackQueryHandler\n",
         "import openpyxl\n",
         "# Assuming you have a 'keys.py' file with your token\n",
-        "import my_keys\n",
+        "import keys\n",
         "\n",
         "# Apply nest_asyncio to allow nested event loops\n",
         "nest_asyncio.apply()\n",
@@ -31,6 +86,9 @@
         "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
         "    level=logging.INFO\n",
         ")\n",
+        "logging.getLogger(\"httpx\").setLevel(logging.WARNING)\n",
+        "logger = logging.getLogger(__name__)\n",
+        "\n",
         "\n",
         "# Load your Excel workbook\n",
         "load_workbook_and_sheet()\n",
@@ -40,7 +98,7 @@
         "# Function to check if the user is the bot administrator\n",
         "def is_admin(update: Update, context: ContextTypes.DEFAULT_TYPE) -> bool:\n",
         "    user = update.effective_user\n",
-        "    return user.id == my_keys.admin_id\n",
+        "    return user.id == keys.admin_id\n",
         "\n",
         "async def upload_excel(update: Update, context: ContextTypes.DEFAULT_TYPE):\n",
         "    if check_admin and not is_admin(update, context):\n",
@@ -86,7 +144,7 @@
         "\n",
         "# Command handler for /start\n",
         "async def start(update: Update, context: ContextTypes.DEFAULT_TYPE):\n",
-        "    await update.message.reply_text('Send me a word, and I\\'ll find its value in the Excel file.')\n",
+        "    await update.message.reply_text('Введите номер региона для получения информации о налоговом вычете (номер региона может отличаться от реального)')\n",
         "    context.user_data['waiting_for_password'] = False\n",
         "    context.user_data['waiting_for_file'] = False\n",
         "\n",
@@ -94,7 +152,7 @@
         "async def handle_message(update: Update, context: ContextTypes.DEFAULT_TYPE):\n",
         "    if context.user_data.get('waiting_for_password'):\n",
         "        try:\n",
-        "            if update.message.text == str(my_keys.password):\n",
+        "            if update.message.text == str(keys.password):\n",
         "                context.user_data['waiting_for_file'] = True\n",
         "                context.user_data['waiting_for_password'] = False\n",
         "                await update.message.reply_text(\"Password accepted. Please upload the Excel file.\")\n",
@@ -118,28 +176,41 @@
         "            # Create an inline keyboard with column names\n",
         "            keyboard = [\n",
         "                [InlineKeyboardButton(column_name, callback_data=f\"{word}:{column_name}\")]\n",
-        "                for column_name in get_column_names()[:3]\n",
+        "                for column_name in get_column_names()[1:3]\n",
         "            ]\n",
+        "            keyboard.append([InlineKeyboardButton(\"Выбрать другой регион\",callback_data=\"back\")])\n",
         "            reply_markup = InlineKeyboardMarkup(keyboard)\n",
-        "            await update.message.reply_text('Select a column:', reply_markup=reply_markup)\n",
+        "            await update.message.reply_text(f'Ваш выбор {row[1]}! Доступная информация:', reply_markup=reply_markup)\n",
         "            return\n",
-        "    await update.message.reply_text('Word not found in the Excel file.')\n",
+        "    await update.message.reply_text('Данный номер региона не найден в текущей базе данных')\n",
         "\n",
         "# Callback query handler for column selection\n",
         "async def handle_button(update: Update, context: ContextTypes.DEFAULT_TYPE):\n",
         "    query = update.callback_query\n",
         "    query.answer()\n",
+        "    if query.data == \"back\":\n",
+        "      await query.edit_message_text(f\"Введите номер региона\")\n",
+        "      return\n",
         "    word, column_name = query.data.split(':')\n",
         "    # Find the row with the word and get the value from the selected column\n",
         "    for row in sheet.iter_rows(min_row=2, values_only=True):\n",
         "        if str(row[0]) == word:\n",
         "            column_index = get_column_names().index(column_name) + 1 # +1 because columns start from 1\n",
         "            value = row[column_index]\n",
-        "            await query.edit_message_text(f'The value for \"{word}\" in column \"{column_name}\" is: {value}')\n",
+        "            keyboard = [\n",
+        "                [InlineKeyboardButton(column_name, callback_data=f\"{word}:{column_name}\")]\n",
+        "                for column_name in get_column_names()[:3]\n",
+        "            ]\n",
+        "            keyboard.append([InlineKeyboardButton(\"Выбрать другой регион\",callback_data=\"back\")])\n",
+        "            keyboard.remove([InlineKeyboardButton(column_name, callback_data=f\"{word}:{column_name}\")])\n",
+        "            print(keyboard)\n",
+        "            reply_markup = InlineKeyboardMarkup(keyboard)\n",
+        "            await query.edit_message_text(f\"Ваш выбор {row[1]}! По вопросу {column_name} имеются следующие данные: {value}\", reply_markup=reply_markup) #(f'The value for \"{word}\" in column \"{column_name}\" is: {value}')\n",
+        "            #await update.message.reply_text('новый тест:', reply_markup=reply_markup)\n",
         "            return\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    application = ApplicationBuilder().token(my_keys.token).build()\n",
+        "    application = ApplicationBuilder().token(keys.token).build()\n",
         "\n",
         "    # Command handler for /start\n",
         "    start_handler = CommandHandler('start', start)\n",
@@ -164,6 +235,16 @@
         "    # Run the bot\n",
         "    application.run_polling()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-xz4otr43Xc7"
+      },
+      "id": "-xz4otr43Xc7",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
